fix: truncate title at the end of word, design fixes -refs#254114

--- a/src/components/Widgets/measure.css
+++ b/src/components/Widgets/measure.css
@@ -59,7 +59,7 @@
 
 .measure-form .ui.accordion .title {
   width: calc(100% - 15px);
-  border-bottom: 3px solid #c1c1c1 !important;
+  border-bottom: 1px solid #e6e7e8 !important;
   font-weight: bold;
 }
 
@@ -72,9 +72,8 @@
 }
 
 .measure__items table {
-  width: calc(100% + 15px);
+  width: 100%;
   border: 1px solid #c1c1c1;
-  margin-left: -15px;
   border-collapse: collapse;
   table-layout: fixed;
 }
